# jwtvault_examples

./: .env  .gitignore  Cargo.toml  README.md  build.rs
documentation/: POSTGRES.md  setup.sql
src/: database.rs
src/database/: db_common.rs  db_pool.rs  errors.rs  r2d2_pool.rs  setup.rs  users_setup.rs
