[package]
name = "jwtvault_examples"
version = "0.1.0"
authors = ["Saurav Gupta <sgrust01@gmail.com>"]
edition = "2018"
default-run = "helloworld"
publish = false
description = """
Examples for jwtvault
"""


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="helloworld"
path="src/bin/01_hello_world.rs"

[[bin]]
name="actix"
path="src/bin/02_actix_server.rs"

[[bin]]
name="custom"
path="src/bin/03_custom_memory_vault.rs"


[dependencies]
jwtvault = {git = "https://github.com/sgrust01/jwtvault"}
rand="0.7.3"
actix-web = "2"
actix-rt = "1"
actix-http="1.0.1"

