[package]
name = "jwtvault_examples"
version = "0.5.0"
authors = ["Saurav Gupta <sgrust01@gmail.com>"]
edition = "2018"
default-run = "helloworld"
publish = false
description = """
Examples for jwtvault
"""


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="helloworld"
path="src/bin/01_hello_world.rs"

[[bin]]
name="actix"
path="src/bin/02_actix_server.rs"

[[bin]]
name="custom"
path="src/bin/03_custom_memory_vault.rs"

[[bin]]
name="postgres"
path="src/bin/04_async_postgres.rs"


[dependencies]
jwtvault = "0.5.0"
rand="0.7.3"
actix-web = "2"
actix-rt = "1"
actix-http="1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postgres ="0.16.0-rc.2"
tokio-postgres = "0.4.0-rc.3"
r2d2 = "0.8.5"
r2d2_postgres = "0.15.0-rc.1"
dotenv = "0.15.0"
failure = "0.1.6"