[package]
name = "jwtvault_examples"
version = "0.6.0"
authors = ["Saurav Gupta <sgrust01@gmail.com>"]
edition = "2018"
default-run = "helloworld-dynamic"
publish = false
description = """
Examples for jwtvault
"""


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="helloworld-static"
path="src/bin/01_hello_world_static.rs"

[[bin]]
name="helloworld-dynamic"
path="src/bin/01_hello_world_dynamic.rs"

[[bin]]
name="actix-static"
path="src/bin/02_actix_server_static.rs"

[[bin]]
name="actix-dynamic"
path="src/bin/02_actix_server_dynamic.rs"

[[bin]]
name="custom-static"
path="src/bin/03_custom_memory_vault_static.rs"

[[bin]]
name="custom-dynamic"
path="src/bin/03_custom_memory_vault_dynamic.rs"

[[bin]]
name="postgres-static"
path="src/bin/04_async_postgres_static.rs"

[[bin]]
name="postgres-dynamic"
path="src/bin/04_async_postgres_dynamic.rs"

[[bin]]
name="webserver-static"
path="src/bin/05_web_server_static.rs"

[[bin]]
name="webserver-dynamic"
path="src/bin/05_web_server_dynamic.rs"


[dependencies]
jwtvault = "0.6.0"
rand="0.7.3"
actix-web = "2"
actix-rt = "1"
actix-http="1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postgres ="0.16.0-rc.2"
tokio-postgres = "0.4.0-rc.3"
r2d2 = "0.8.5"
r2d2_postgres = "0.15.0-rc.1"
dotenv = "0.15.0"
failure = "0.1.6"